@@ -335,6 +335,10 @@ on <A HREF="#Clustering">Clustering</A> for more information.
 Interface for cluster packets (default: eth0).
 </LI>
 
+<LI><B>cluster_mcast_ttl</B> (int)<BR>
+TTL for multicast packets (default: 1).
+</LI>
+
 <LI><B>cluster_hb_interval</B> (int)<BR>
 Interval in tenths of a second between cluster heartbeat/pings.
 </LI>
